applications/eulermaker/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eulermaker-ingress
  namespace: eulermaker-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: "106.12.137.18,111.19.93.9,117.35.157.250,119.13.112.109,119.3.11.149,
      119.3.176.232,119.8.242.0/24,119.8.45.192,120.46.196.17,121.196.199.87,
      122.9.157.252,122.9.168.161,122.9.66.58,140.210.201.8,27.156.184.251,
      39.100.228.69,60.29.124.198,116.205.148.139/25,119.3.119.18/29,119.8.243.109/24,
      116.205.147.144,119.8.243.0/24,121.37.228.245,122.9.168.217,122.9.169.34,
      122.9.189.105,122.9.237.141,123.139.20.37,123.139.27.183,123.60.114.0/24,
      123.60.141.38,124.70.88.106,124.71.93.0/24,124.71.94.0/24,125.118.104.228,
      139.159.170.0/24,139.9.246.116,180.76.160.158,180.76.226.124,183.242.28.106,
      1.80.145.175,113.140.251.120,113.200.202.18,115.227.98.108,116.205.147.144,
      119.13.112.119,119.13.112.247,119.8.177.0/24,119.8.242.3,121.37.228.245,
      122.9.168.0/24,122.9.169.0/24,123.139.89.174,123.60.114.22,123.60.141.38,
      139.159.170.29,139.159.203.30,139.9.116.208,183.157.9.226,218.247.43.97,
      10.7.13.146,61.149.209.50,1.202.39.170,81.68.227.196,36.111.64.85,
      124.16.141.247,221.6.34.66,112.96.225.69,123.56.107.187,175.99.131.92,
      113.200.202.18,123.150.8.42,10.134.228.94,60.186.153.178"
spec:
  rules:
  - host: eulermaker.compass-ci.openeuler.openatom.cn
    http:
      paths:
      - backend:
          serviceName: eulermaker-service
          servicePort: 80
        path: /
  tls:
    - hosts:
      - eulermaker.compass-ci.openeuler.openatom.cn
      secretName: eulermaker-tls
